[Java] Improve the assertion message.